<resources>
    <string name="app_name">GestionTaller</string>
    <string name="create_editUser">Create/Edit user</string>
    <string name="real_name">Real name</string>
    <string name="mail">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="rol">Job rol</string>
    <string name="cancel_operation">Cancel operation</string>
    <string name="greetings">Welcome back,</string>
    <string name="registered_employees">Registered employees</string>
    <string name="no_employees_shown">No employees to be shown</string>
    <string name="assign_cars_chief">Assign cars to chief mechanic</string>
    <string name="license_plate">License plate</string>
    <string name="chief_mechanic">Chief mechanic</string>
    <string name="assign_mechanic_repair">Assign mechanics to repairs</string>
    <string name="repair_number">Repair number</string>
    <string name="mechanic_in_charge">Mechanic in charge</string>
    <string name="assign_mechanic">Assign mechanic</string>
    <string name="assign_car">Assign car</string>
    <string name="parts_list">Parts list</string>
    <string name="parts_available">Parts available</string>
    <string name="parts_out_of_stock">Parts out of stock</string>
    <string name="available_actions">Available actions</string>
    <string name="new_entry">New car entry</string>
    <string name="new_repair_job">New repair job</string>
    <string name="notify_client">Notify client</string>
    <string name="check_stock">Check stock</string>
    <string name="order_new_parts">Order new parts</string>
    <string name="date">Date</string>
    <string name="client">Client</string>
    <string name="repair_desc">Repair description</string>
    <string name="retailer">Retailer</string>
    <string name="parts_to_buy">Parts to buy</string>
    <string name="unit_price">Unit price:</string>
    <string name="units">Units</string>
    <string name="subtotal">Subtotal:</string>
    <string name="repair">Repair job</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="add_update_diagnostic">Add/Update diagostic</string>
    <string name="finish_repair">Finish repair</string>
    <string name="assign_mechanic_task">Assign mechanics to tasks</string>
    <string name="mechanic_list">Mechanic list</string>
    <string name="task">Task</string>
    <string name="repair_list">Repair list</string>
    <string name="finish_task">Finish task</string>
    <string name="select_task_finish">Select the task you want to finish</string>
    <string name="new_task">New task</string>
    <string name="select_repair">Select a repair</string>
    <string name="task_des">Task description</string>
    <string name="save_changes">Save changes</string>
    <string name="repair_details">Repair details</string>
    <string name="app_greetings">Welcome to Manolo´s car shop</string>
    <string name="login_message">Sign up as a client or sign in if you already have an account</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="task_list">Task list</string>
    <string name="task_details">Task details</string>
    <string name="sign_up_question">Not yet registered?</string>
    <string name="confirm_password">Comfirm password</string>
    <string name="sign_in_question">Already have an account?</string>
    <string name="task_number">Task number</string>
    <string name="editDesc">Edit desc</string>
    <string name="task_comnt">Task comments</string>
    <string name="repair_diagnostic">Repair Diagnostic</string>
    <string name="respond_diagnostic">Respond diagnostic</string>
    <string name="profile_info">Profile info</string>
    <string name="contact_car_shop">Contact car shop</string>
    <string name="log_out">Log out</string>
</resources>