<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grdient_list"
    android:orientation="vertical"
    tools:context=".chief_mechanic.ChiefMechanic_Add_Complete_Diagnostic">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:background="@drawable/rounded_corner_container"
        android:padding="15dp"
        android:text="@string/repair"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0"
        android:background="@drawable/half_round_container"
        android:backgroundTint="@color/transparent_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/repairNumberTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/repair_number"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/licensePlateTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/license_plate"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/licensePlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/dateTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/descTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/repair_desc"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_textField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/transparent_white"
                android:gravity="start"
                android:minHeight="100dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/transparent_white"
                    android:backgroundTintMode="src_over"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/diagnosticTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/diagnostic"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/diagnostic_textField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/transparent_white"
                android:gravity="start"
                android:minHeight="100dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/diagnostic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/transparent_white"
                    android:backgroundTintMode="src_over" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/half_round_container"
                android:backgroundTint="@color/softGreen"
                android:fontFamily="sans-serif-medium"
                android:padding="15dp"
                android:text="@string/add_update_diagnostic"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/complete"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="40dp"
                android:background="@color/softBlue"
                android:fontFamily="sans-serif-medium"
                android:padding="15dp"
                android:text="@string/finish_repair"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/inverted_half_round_container"
                android:backgroundTint="@color/softRed"
                android:fontFamily="sans-serif-medium"
                android:padding="15dp"
                android:text="@string/cancel_operation"
                android:textColor="@color/red"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>