<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grdient_list"
    android:orientation="vertical"
    tools:context=".mechanic.Mechanic_SelectedTask">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:background="@drawable/rounded_corner_container"
        android:padding="15dp"
        android:text="@string/task_details"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:orientation="horizontal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="0"
        android:background="@drawable/half_round_container"
        android:backgroundTint="@color/transparent_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_textField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/transparent_white"
                android:hint="@string/task"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/transparent_white"
                    android:backgroundTintMode="src_over"
                    android:editable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/licensePlate_textField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/transparent_white"
                android:hint="@string/repair"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/transparent_white"
                    android:backgroundTintMode="src_over"
                    android:editable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_corner_container"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/task_des"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_textField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/transparent_white"
                    android:gravity="start"
                    android:minHeight="100dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/transparent_white"
                        android:backgroundTintMode="src_over"
                        android:editable="false" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_corner_container"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/mechanic_list"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="15dp"
                    android:clickable="false"
                    android:minHeight="250dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>